--- a/midterm-practical/styles/Home.module.css
+++ b/midterm-practical/styles/Home.module.css
@@ -17,16 +17,16 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-h1 {
+.title {
   color: #ffcc00;
 }
 
-h2 {
+.heading {
   margin-top: 20px;
   color: #ff6600;
 }
 
-button {
+.button {
   background-color: #007bff;
   color: white;
   border: none;
@@ -35,6 +35,6 @@ button {
   border-radius: 5px;
 }
 
-button:hover {
+.button:hover {
   background-color: #0056b3;
 }
