--- a/midterm-practical/styles/ItemList.module.css
+++ b/midterm-practical/styles/ItemList.module.css
@@ -22,7 +22,7 @@
     color: black;
 }
 
-input {
+.inputField {
     padding: 8px;
     margin-right: 5px;
     border: 1px solid #ffcc00;
@@ -31,7 +31,7 @@ input {
     color: white;
 }
 
-button {
+.button {
     padding: 8px 12px;
     border: none;
     background-color: #ff6600;
@@ -40,6 +40,6 @@ button {
     border-radius: 4px;
 }
 
-button:hover {
+.button:hover {
     background-color: #ff3300;
 }
